--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Meglathery Happenings
+description: Things the Meglathery clan are doing will be presented here!
